--- a/amuse.html
+++ b/amuse.html
@@ -16,7 +16,7 @@
   <section>
     <h2><em>Sometimes</em> Fresh Laughs</h2>
         <p>Here's an article I found with 113 Best Corny Jokes. Look through them, laugh a little, and maybe save some to tell your friends!</p>
-        <a href="https://www.goodhousekeeping.com/life/entertainment/a41779929/corny-jokes/">r/Jokes</a>
+        <a href="https://www.goodhousekeeping.com/life/entertainment/a41779929/corny-jokes/">Corny Jokes</a>
   </h2>
   </section>
   <section>
