--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Holland Durrant</h1>
-        <img src="https://bacs200steven-sanchez.github.io/sanchez-steven.png" alt="pic of Steven Sanchez">
+        <img src="hollanddurrant.github.io/thumbnail_IMG_2011.jpg" alt="pic of Holland Durrant">
         <p>I enjoy tinkering with computers, playing video games, and lately I've been having fun learning how to set up solar panels.</p>
     </body>
 </html>
