--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Holland Durrant</h1>
-        <img src="hollanddurrant.github.io/hollanddurrant.png" alt="pic of Holland Durrant">
+        <img src="https://github.com/hollanddurrant/hollanddurrant.github.io/blob/main/hollanddurrant.png" alt="pic of Holland Durrant">
         <p>I enjoy tinkering with computers, playing video games, and lately I've been having fun learning how to set up solar panels.</p>
     </body>
 </html>
