--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Holland Durrant</h1>
-        <img src="C:\Users\durr5367\Downloads\hollanddurrant.png" alt="pic of Holland Durrant">
-        <p>I enjoy tinkering with computers, playing video games, and lately I've been having fun learning how to set up solar panels.</p>
+        <img src="" alt="pic of Holland Durrant">
+        <p>I am a third year student majoring in Business Administration Management, while trying to get certificates in Human Resources and Digital Marketing.</p>
     </body>
 </html>
