--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Holland Durrant</h1>
-        <img src="" alt="pic of Holland Durrant">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphoto%2Ffrench-bulldog-puppy-on-white-background-gm1324893210-410086600&psig=AOvVaw3h-E3NhwOv2N3YV5DrfB55&ust=1706909300692000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCPCK_uuKi4QDFQAAAAAdAAAAABAE">
         <p>I am a third year student majoring in Business Administration Management, while trying to get certificates in Human Resources and Digital Marketing.</p>
     </body>
 </html>
