--- a/index.html
+++ b/index.html
@@ -1,2 +1,22 @@
-<h1>Title</h1>
-Hello my name is Holland.
+<html lang="en">
+    <head>
+      <meta charset="UTF-8">
+      <title>Homepage</title>
+    </head>
+    <body>
+      <h1 class="title">My Homepage</h1>
+      <img height="100" src="logo.png" alt="UNC Logo">
+      <ol>
+        <li>
+          <a href="hollanddurrant.github.io/profile.html">My Profile</a>
+        </li>
+        <li>
+          <a href="hollanddurrant.github.io/inspire.html">My Hero</a>
+        </li>
+        <li>
+          <a href="hollanddurrant.github.io/amuse.html">My Amusement</a>
+        </li>
+      </ol>
+    </body>
+</html>
+
