--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
       <img height="100" src="logo.png" alt="UNC Logo">
       <ol>
         <li>
-          <a href="hollanddurrant.github.io/profile.html">My Profile</a>
+          <a href="profile.html">My Profile</a>
         </li>
         <li>
-          <a href="hollanddurrant.github.io/inspire.html">My Hero</a>
+          <a href="inspire.html">My Hero</a>
         </li>
         <li>
-          <a href="hollanddurrant.github.io/amuse.html">My Amusement</a>
+          <a href="amuse.html">Things I find funny</a>
         </li>
       </ol>
     </body>
