--- a/index.html
+++ b/index.html
@@ -7,15 +7,9 @@
       <h1 class="title">My Homepage</h1>
       <img height="100" src="logo.png" alt="UNC Logo">
       <ol>
-        <li>
-          <a href="profile.html">My Profile</a>
-        </li>
-        <li>
-          <a href="inspire.html">My Hero</a>
-        </li>
-        <li>
-          <a href="amuse.html">Things I find funny</a>
-        </li>
+        <li><a href="profile.html">My Profile</a></li>
+        <li><a href="inspire.html">My Hero</a></li>
+        <li><a href="amuse.html">Things I find funny</a></li>
       </ol>
     </body>
 </html>
