--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
       <h1 class="title">My Homepage</h1>
-      <img height="100" src="logo.png" alt="UNC Logo">
+      <img src="logo.png" alt="UNC Logo" height="100" width="150">
       <ol>
         <li><a href="profile.html">My Profile</a></li>
         <li><a href="inspire.html">My Hero</a></li>
