--- a/inspire.html
+++ b/inspire.html
@@ -5,7 +5,7 @@
     <body>
         <h1>Coco Chanel</h1>
         <h2>Portrait</h2>
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.vogue.com%2Farticle%2F5-things-you-didnt-know-about-coco-chanel&psig=AOvVaw0ZZhvr-jKzTobdh30ZRkXc&ust=1706301369919000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCPjc84my-YMDFQAAAAAdAAAAABAH" alt="Coco Chanel">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.vogue.com%2Farticle%2F5-things-you-didnt-know-about-coco-chanel&psig=AOvVaw0ZZhvr-jKzTobdh30ZRkXc&ust=1706301369919000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCPjc84my-YMDFQAAAAAdAAAAABAH" alt="Coco Chanel" height="200" width="200">
         <h2>A revolutionary to the fashion industry.</h2>
         <p>Chanel's elegant, casual designs inspired women of fashion to abandon uncomfortable clothes, such as petticoats and corsets, that were prevalent in 19th-century dress. Chanel, against the current, began to offer sporty silhouettes with simple and soft lines, in line with what would become the new trend of the beginning of the century.</p>
         <p>Chanel's clothing didn't just reflect new ideas regarding feminine appearance. The clothes represented a whole new way of looking at female aaction. Women could now walk unhampered by corsets and layered dresses they had previously been forced into to represent the Victorian female ideal. To me, she represents the belief of being able to do whatever you want, if you put your mind to it and give it your all.</p>
