--- a/template.html
+++ b/template.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
   <meta charset=UTF-8"
-    <title>TEMPLATE </title>
+    <title>TEMPLATE Page</title>
 </head>
 <body>
-  <h1>Page Title</h1>
+  <h1>Testing</h1>
+  <table>
+  <tr>
+    <th>Page Name</th>
+    <th>URL</th>
+    <th>Validation</th>
+  </tr>
+   <tr>
+     <th>Template</th>
+     <td><a href="https:www.hollanddurrant.com/template.html"></td>
+   </tr> 
+  </table>
 </body>
 </html>
