--- a/template.html
+++ b/template.html
@@ -14,8 +14,14 @@
   </tr>
    <tr>
      <th>Template</th>
-     <td><a href="https:www.hollanddurrant.com/template.html"></td>
+     <td><a href="https://hollanddurrant.github.io/template.html">https://hollanddurrant.github.io/template.html</a></td>
+     <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fhollanddurrant.github.io%2Ftemplate.html">VALIDATE</a></td>
    </tr> 
+    <tr>
+      <th>Amuse</th>
+      <td><a href="https://hollanddurrant.github.io/amuse.html">"https://hollanddurrant.github.io/amuse.html"</a></td>
+      <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fhollanddurrant.github.io%2Famuse.html">VALIDATE</a></td>
+    </tr>
   </table>
 </body>
 </html>
