--- a/template.html
+++ b/template.html
@@ -13,14 +13,19 @@
     <th>Validation</th>
   </tr>
    <tr>
-     <th>Template</th>
-     <td><a href="https://hollanddurrant.github.io/template.html">https://hollanddurrant.github.io/template.html</a></td>
-     <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fhollanddurrant.github.io%2Ftemplate.html">VALIDATE</a></td>
+     <th>Inspire</th>
+     <td><a href="https://hollanddurrant.github.io/inspire.html">https://hollanddurrant.github.io/inspire.html</a></td>
+     <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fhollanddurrant.github.io%2Finspire.html">VALIDATE</a></td>
    </tr> 
     <tr>
       <th>Amuse</th>
       <td><a href="https://hollanddurrant.github.io/amuse.html">"https://hollanddurrant.github.io/amuse.html"</a></td>
       <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fhollanddurrant.github.io%2Famuse.html">VALIDATE</a></td>
+    </tr>
+     <tr>
+      <th>Profile</th>
+      <td><a href="https://hollanddurrant.github.io/profile.html">"https://hollanddurrant.github.io/profile.html"</a></td>
+      <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fhollanddurrant.github.io%2Fprofile.html">VALIDATE</a></td>
     </tr>
   </table>
 </body>
