--- a/template.html
+++ b/template.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset=UTF-8"
-    <title>TEMPLATE Page</title>
+    <title>Template Page</title>
 </head>
 <body>
-  <h1>Testing</h1>
+  <h1>Test results</h1>
   <table>
   <tr>
     <th>Page Name</th>
