--- a/template.html
+++ b/template.html
@@ -27,6 +27,11 @@
       <td><a href="https://hollanddurrant.github.io/profile.html">"https://hollanddurrant.github.io/profile.html"</a></td>
       <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fhollanddurrant.github.io%2Fprofile.html">VALIDATE</a></td>
     </tr>
+     <tr>
+      <th>Homepage</th>
+      <td><a href="https://hollanddurrant.github.io/index.html">"https://hollanddurrant.github.io/index.html"</a></td>
+      <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fhollanddurrant.github.io%2Findex.html">VALIDATE</a></td>
+    </tr>
   </table>
 </body>
 </html>
