--- a/ec/entities.html
+++ b/ec/entities.html
@@ -21,8 +21,13 @@
   <tr>
     <th>&lt;</th>
     <td>Less Than</td>
-    <td>&ampl;lt;</td>
+    <td>&amp;lt;</td>
   </tr>
+   <tr>
+    <th>&gt;</th>
+    <td>Greater Than</td>
+    <td>&amp;gt;</td>
+  </tr>  
   </table>
 </body>
 </html>  
