--- a/ec/entities.html
+++ b/ec/entities.html
@@ -23,11 +23,16 @@
     <td>Less Than</td>
     <td>&amp;lt;</td>
   </tr>
-   <tr>
+  <tr>
     <th>&gt;</th>
     <td>Greater Than</td>
     <td>&amp;gt;</td>
   </tr>  
+  <tr>
+    <th>&Ntilde;</th>
+    <td>Enye</td>
+    <td>&amp;Ntilde;</td>
+</tr>  
   </table>
 </body>
 </html>  
