--- a/ec/entities.html
+++ b/ec/entities.html
@@ -33,6 +33,16 @@
     <td>Enye</td>
     <td>&amp;Ntilde;</td>
 </tr>  
+<tr>
+    <th>&copy;</th>
+    <td>Copyright</td>
+    <td>&amp;copy;</td>
+</tr>  
+<tr>
+    <th>&frac12;</th>
+    <td>Half</td>
+    <td>&amp;frac12;</td>
+</tr>  
   </table>
 </body>
 </html>  
