--- a/ec/entities.html
+++ b/ec/entities.html
@@ -43,6 +43,36 @@
     <td>Half</td>
     <td>&amp;frac12;</td>
 </tr>  
+<tr>
+    <th>&amp;</th>
+    <td>Ampersand</td>
+    <td>&amp;amp;</td>
+</tr>  
+<tr>
+    <th>&cent;</th>
+    <td>Cent</td>
+    <td>&amp;cent;</td>
+</tr>  
+<tr>
+    <th>&reg;</th>
+    <td>Trademark</td>
+    <td>&amp;reg;</td>
+</tr> 
+<tr>
+    <th>&pound;</th>
+    <td>Pound</td>
+    <td>&amp;pound;</td>
+</tr>
+<tr>
+    <th>&yen;</th>
+    <td>Yen</td>
+    <td>&amp;yen;</td>
+</tr>
+<tr>
+    <th>&euro;</th>
+    <td>Euro</td>
+    <td>&amp;euro;</td>
+</tr>  
   </table>
 </body>
 </html>  
