--- a/ec/entities.html
+++ b/ec/entities.html
@@ -73,6 +73,16 @@
     <td>Euro</td>
     <td>&amp;euro;</td>
 </tr>  
+<tr>
+    <th>&quot;</th>
+    <td>Dble qte mrk</td>
+    <td>&amp;quot;</td>
+</tr>  
+<tr>
+    <th>&apos;</th>
+    <td>Sgle qte mrk</td>
+    <td>&amp;apos;</td>
+</tr>  
   </table>
 </body>
 </html>  
