--- a/ec/entities.html
+++ b/ec/entities.html
@@ -83,6 +83,46 @@
     <td>Sgle qte mrk</td>
     <td>&amp;apos;</td>
 </tr>  
+<tr>
+    <th>&dollar;</th>
+    <td>Dollar</td>
+    <td>&amp;dollar;</td>
+</tr> 
+<tr>
+    <th>&plus;</th>
+    <td>Plus</td>
+    <td>&amp;plus;</td>
+</tr>
+<tr>
+    <th>&minus;</th>
+    <td>Minus</td>
+    <td>&amp;minus;</td>
+</tr>
+<tr>
+    <th>&times;</th>
+    <td>Multiply</td>
+    <td>&amp;times;</td>
+</tr>  
+<tr>
+    <th>&divide;</th>
+    <td>Divide</td>
+    <td>&amp;divide;</td>
+</tr> 
+<tr>
+    <th>&equals;</th>
+    <td>Equals</td>
+    <td>&amp;equals;</td>
+</tr>
+<tr>
+    <th>&ne;</th>
+    <td>Not equal to</td>
+    <td>&amp;ne;</td>
+</tr> 
+<tr>
+    <th>&percnt;</th>
+    <td>Percentage</td>
+    <td>&amp;percnt;</td>
+</tr>  
   </table>
 </body>
 </html>  
