--- a/inspire.html
+++ b/inspire.html
@@ -11,7 +11,7 @@
         <p>Chanel's clothing didn't just reflect new ideas regarding feminine appearance. The clothes represented a whole new way of looking at female aaction. Women could now walk unhampered by corsets and layered dresses they had previously been forced into to represent the Victorian female ideal. To me, she represents the belief of being able to do whatever you want, if you put your mind to it and give it your all.</p>
         <p><a href="https://nam11.safelinks.protection.outlook.com/?url=https%3A%2F%2Ftheworldofcocochanel.weebly.com%2F-impact-on-fashion.html&data=05%7C02%7Cdurr5367%40bears.unco.edu%7C3aa78f93caec4cdffb5408dc1de32ef2%7C48e07fd6ad72497fb298b5c57de6db2d%7C0%7C0%7C638418108778726170%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C3000%7C%7C%7C&sdata=fNMV%2FfI19myV2M%2B3a6vbhRvbHry%2Bq2c18dplrO7P7Wg%3D&reserved=0"></a></p>
     <div id="navhome">
-            <a href="index.html"><img height="50" src="images/home.png" alt="Home Button"></a>
+            <a href="index.html"><img height="50" src="images/button_home.png" alt="Home Button"></a>
         </div>
     </body>
 </html>
