--- a/test.html
+++ b/test.html
@@ -32,6 +32,11 @@
       <td><a href="https://hollanddurrant.github.io/index.html">"https://hollanddurrant.github.io/index.html"</a></td>
       <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fhollanddurrant.github.io%2Findex.html">VALIDATE</a></td>
     </tr>
+    <tr>
+      <th>Template</th>
+      <td><a href="https://hollanddurrant.github.io/test.html">"https://hollanddurrant.github.io/test.html"</a></td>
+      <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fhollanddurrant.github.io%2Ftest.html">VALIDATE</a></td>
+    </tr>
   </table>
 </body>
 </html>
