--- a/test.html
+++ b/test.html
@@ -1,42 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset=UTF-8"
+  <head>
+    <meta charset="UTF-8"
     <title>Template Page</title>
-</head>
-<body>
-  <h1>Test results</h1>
+  </head>
+  <body>
+    <h1>Test results</h1>
   <table>
-  <tr>
-    <th>Page Name</th>
-    <th>URL</th>
-    <th>Validation</th>
-  </tr>
-   <tr>
-     <th>Inspire</th>
-     <td><a href="https://hollanddurrant.github.io/inspire.html">https://hollanddurrant.github.io/inspire.html</a></td>
-     <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fhollanddurrant.github.io%2Finspire.html">VALIDATE</a></td>
-   </tr> 
     <tr>
-      <th>Amuse</th>
-      <td><a href="https://hollanddurrant.github.io/amuse.html">"https://hollanddurrant.github.io/amuse.html"</a></td>
-      <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fhollanddurrant.github.io%2Famuse.html">VALIDATE</a></td>
+      <th>Page Name</th>
+      <th>URL</th>
+      <th>Validation</th>
     </tr>
      <tr>
-      <th>Profile</th>
-      <td><a href="https://hollanddurrant.github.io/profile.html">"https://hollanddurrant.github.io/profile.html"</a></td>
-      <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fhollanddurrant.github.io%2Fprofile.html">VALIDATE</a></td>
-    </tr>
-     <tr>
-      <th>Homepage</th>
-      <td><a href="https://hollanddurrant.github.io/index.html">"https://hollanddurrant.github.io/index.html"</a></td>
-      <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fhollanddurrant.github.io%2Findex.html">VALIDATE</a></td>
-    </tr>
-    <tr>
-      <th>Template</th>
-      <td><a href="https://hollanddurrant.github.io/test.html">"https://hollanddurrant.github.io/test.html"</a></td>
-      <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fhollanddurrant.github.io%2Ftest.html">VALIDATE</a></td>
-    </tr>
+       <th>Inspire</th>
+       <td><a href="https://hollanddurrant.github.io/inspire.html">https://hollanddurrant.github.io/inspire.html</a></td>
+       <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fhollanddurrant.github.io%2Finspire.html">VALIDATE</a></td>
+     </tr> 
+      <tr>
+        <th>Amuse</th>
+        <td><a href="https://hollanddurrant.github.io/amuse.html">"https://hollanddurrant.github.io/amuse.html"</a></td>
+        <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fhollanddurrant.github.io%2Famuse.html">VALIDATE</a></td>
+      </tr>
+       <tr>
+        <th>Profile</th>
+        <td><a href="https://hollanddurrant.github.io/profile.html">"https://hollanddurrant.github.io/profile.html"</a></td>
+        <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fhollanddurrant.github.io%2Fprofile.html">VALIDATE</a></td>
+      </tr>
+       <tr>
+        <th>Homepage</th>
+        <td><a href="https://hollanddurrant.github.io/index.html">"https://hollanddurrant.github.io/index.html"</a></td>
+        <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fhollanddurrant.github.io%2Findex.html">VALIDATE</a></td>
+      </tr>
+      <tr>
+        <th>Template</th>
+        <td><a href="https://hollanddurrant.github.io/test.html">"https://hollanddurrant.github.io/test.html"</a></td>
+        <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fhollanddurrant.github.io%2Ftest.html">VALIDATE</a></td>
+      </tr>
   </table>
 </body>
 </html>
