--- a/test.html
+++ b/test.html
@@ -3,6 +3,25 @@
   <head>
     <meta charset="UTF-8"
     <title>Template Page</title>
+    <style>
+      td
+      {
+        border: 1px solid black;
+      }
+      th, table
+      {
+        border: 3px solid black;
+      }
+      table
+      {
+        border-collapse:collapse;
+      }
+      td,th
+      {
+        padding-left: 10px:
+        padding-right: 10px:
+      }
+    </style>
   </head>
   <body>
     <h1>Test results</h1>
