--- a/ec/entities.html
+++ b/ec/entities.html
@@ -8,9 +8,18 @@
     {
       border: 3px solid blue;
     }
-    th
+    th,table
     {
       border: 3px solid blue;
+    }
+    table
+    {
+      border-collapse:collapse;
+    }
+    td,th
+    {
+      padding-left: 10px:
+      padding-right: 10px:
     }
   </style>
 </head>
