--- a/ec/entities.html
+++ b/ec/entities.html
@@ -6,11 +6,11 @@
   <style>
     td
     {
-      border: 3px solid blue;
+      border: 3px solid fuchsia;
     }
     th,table
     {
-      border: 3px solid blue;
+      border: 3px solid fuchsia;
     }
     table
     {
