--- a/superhero.html
+++ b/superhero.html
@@ -36,7 +36,7 @@
   <tr>
     <th>Ironman</th>
     <td>Tony Stark</td>
-    <td><a href="https://wallpapers.com/images/featured-full/iron-man-superhero-ponky3hlfivddo2m.jpg"><img class="heropic" src="images/ironman.jpg" alt="Ironman pic"</a></td>
+    <td><a href="https://wallpapers.com/images/featured-full/iron-man-superhero-ponky3hlfivddo2m.jpg"><img class="heropic" src="images/ironman.jpg" alt="Ironman pic" height="250" width="250" </a></td>
     <td>
         <ul>
           <li>Superhuman strength & durability</li>
