--- a/superhero.html
+++ b/superhero.html
@@ -18,8 +18,10 @@
     }
     td,th
     {
-      padding-left: 10px:
-      padding-right: 10px:
+      padding-left: 20px:
+      padding-right: 20px:
+      padding-top: 20px:
+      padding-bottom: 20px:
     }
   </style>
 </head>
@@ -82,8 +84,4 @@
     <td>Copyright</td>
     <td>&amp;copy;</td>
 </tr>  
-<tr>
-    <th>&frac12;</th>
-    <td>Half</td>
-    <td>&amp;frac12;</td>
-</tr>  
+ 
