--- a/superhero.html
+++ b/superhero.html
@@ -97,10 +97,10 @@
           <li>Her own lasso</li>
         </ul>
     </td>
-  </tr>  
+</tr>  
 <tr>
-    <th>&copy;</th>
-    <td>Copyright</td>
+    <th>Thor</th>
+    <td>Donald Blake</td>
     <td>&amp;copy;</td>
 </tr>  
  
