--- a/superhero.html
+++ b/superhero.html
@@ -102,5 +102,26 @@
     <th>Thor</th>
     <td>Donald Blake</td>
     <td><a href="https://ichef.bbci.co.uk/images/ic/640x360/p09t1hg0.jpg" img class="heropic" src="images/thor.jpg" alt= "Thor pic" height="300" width="300"</a></td>
+   <td>
+        <ul>
+          <li>Super strength</li>
+          <li>Speed</li>
+          <li>Agility</li>
+          <li>Durability</li>
+          <li>Immunity to most diseases</li>
+          <li>Enhanced longevity</li>
+        </ul>
+    </td>
+    <td>
+        <ul>
+          <li>High-level spells</li>
+          <li>Magical weaponry</li>
+          <li>Brotherly love</li>
+          <li>Twilight sword</li>
+          <li>Feelings of unworthiness</li>
+          <li>Poor taste in allies</li>
+          <li>Losing his hammer</li>
+        </ul>
+    </td>
 </tr>  
  
