--- a/superhero.html
+++ b/superhero.html
@@ -101,7 +101,7 @@
 <tr>
     <th>Thor</th>
     <td>Donald Blake</td>
-    <td><a href="https://ichef.bbci.co.uk/images/ic/640x360/p09t1hg0.jpg" img class="heropic" src="images/thor.jpg" alt= "Thor pic" height="300" width="300"</a></td>
+    <td><a href="https://ichef.bbci.co.uk/images/ic/640x360/p09t1hg0.jpg"><img class="heropic" src="images/thor.jpg" alt= "Thor pic" height="300" width="300"</a></td>
    <td>
         <ul>
           <li>Super strength</li>
