--- a/amuse.html
+++ b/amuse.html
@@ -3,6 +3,19 @@
     <head>
         <meta charset="UTF-8"
         <title>The Internet is Amusing</title>
+    <style>
+    body {
+        background-color: lightblue;
+    }
+    h1 {
+        color: white;
+        text-align: center;
+    }
+    p {
+        font-family: zeyada;
+        font-size: 15px;
+    }
+    </style>
     </head>
     <body>
         <h1>Humor on the Web</h1>
