--- a/amuse.html
+++ b/amuse.html
@@ -2,7 +2,6 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8"
-        <title>The Internet is Amusing</title>
     <style>
     body {
         background-color: lightblue;
@@ -12,7 +11,7 @@
         text-align: center;
     }
     p {
-        font-family: zeyada;
+        font-family: zeyada.ttf;
         font-size: 15px;
     }
     </style>
