--- a/amuse.html
+++ b/amuse.html
@@ -11,7 +11,7 @@
         text-align: center;
     }
     p {
-        font-family: zeyada.ttf;
+        font-family: Zeyada-Regular[1].ttf;
         font-size: 15px;
     }
     </style>
