--- a/amuse.html
+++ b/amuse.html
@@ -9,7 +9,7 @@
     }
     h1 {
         color: white;
-        text-align: center;
+        text-align: left;
     }
     p {
         font-family: Zeyada-Regular[1].ttf;
