--- a/amuse.html
+++ b/amuse.html
@@ -12,7 +12,7 @@
         text-align: left;
     }
     p {
-        font-family: Zeyada-Regular[1].ttf;
+        font-family: verdana;
         font-size: 15px;
     }
     </style>
