--- a/amuse.html
+++ b/amuse.html
@@ -11,6 +11,11 @@
         color: white;
         text-align: left;
     }
+      h3 {
+        color: white;
+        text-align: left;
+        font-weight: bold;
+    }
     p {
         font-family: verdana;
         font-size: 15px;
