--- a/amuse.html
+++ b/amuse.html
@@ -7,6 +7,10 @@
     body {
         background-color: lightblue;
     }
+    title {
+        color: white;
+        text-align: left;
+    }
     h1 {
         color: white;
         text-align: left;
