--- a/index.html
+++ b/index.html
@@ -3,6 +3,23 @@
     <head>
       <meta charset="UTF-8">
       <title>Homepage</title>
+     <style>
+    body {
+        background-color: lightblue;
+    }
+    h1 {
+        color: white;
+        text-align: left;
+    }
+      img {
+          border-radius: 50%
+    }
+    p {
+        font-family: verdana;
+        font-size: 15px;
+        font-weight: bold;
+    }
+    </style>
     </head>
     <body>
       <h1 class="title">My Homepage</h1>
