--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     h1 {
         color: white;
         text-align: left;
+        font-family: verdana;
+        font-weight: bold;
     }
       img {
           border-radius: 50%
