--- a/inspire.html
+++ b/inspire.html
@@ -3,6 +3,25 @@
     <head>
         <title>Inspire Me</title>
     </head>
+    <style>
+    body {
+        background-color: lightblue;
+    }
+    h1 {
+        color: white;
+        text-align: left;
+        font-family: verdana;
+        font-weight: bold;
+    }
+      img {
+          border-radius: 50%
+    }
+    p {
+        font-family: verdana;
+        font-size: 15px;
+        font-weight: bold;
+    }
+    </style>
     <body>
         <h1>Coco Chanel</h1>
         <img src="images/coco chanel.png" alt="Coco Chanel" height="200" width="200">
