--- a/amuse.html
+++ b/amuse.html
@@ -15,10 +15,13 @@
         color: white;
         text-align: left;
     }
-    p {
+      p {
         font-family: verdana;
         font-size: 15px;
         font-weight: bold;
+    }
+      img {
+          border-radius: 50%
     }
     </style>
     </head>
