--- a/profile.html
+++ b/profile.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
         <title>My Profile</title>
     </head>
+   <style>
+    body {
+        background-color: lightblue;
+    }
+      h1 {
+        color: white;
+        text-align: left;
+        font-family: verdana;
+        font-weight: bold;
+    }
+      img {
+          border-radius: 50%
+    }
+      p {
+        font-family: verdana;
+        font-size: 15px;
+        font-weight: bold;
+    }
+    </style>
     <body>
         <h1>Holland Durrant</h1>
         <img src="https://media.istockphoto.com/id/1349888325/photo/black-and-tan-french-bulldogs.jpg?s=2048x2048&w=is&k=20&c=y4p1hj669dOfKfCOb3zvV_5zvvqboV1jr1rkplI7MYE=" alt="bulldogs" width="250" height="250">
