--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <title>Homepage</title>
      <style>
     body {
-        "background-color: #6bcae2;
+        background-color: #6bcae2;
     }
     h1 {
         color: white;
