--- a/template.html
+++ b/template.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"
     <title>Template Page</title>
     <style>
       td
@@ -21,7 +20,14 @@
         padding-left: 10px:
         padding-right: 10px:
       }
-    </style>
+        body {
+        background-color: lightblue;
+    }
+        h1 {
+        color: white;
+        text-align: left;
+    }
+  </style>
   </head>
   <body>
     <h1>Test results</h1>
