--- a/superhero.html
+++ b/superhero.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset=UTF-8"
     <title>Superheroes</title>
   <style>
     td, th
@@ -21,6 +20,21 @@
     {
       background-color: red;
       font-size: 20px;
+    }
+      body {
+        background-color: #6bcae2;
+    }
+    h1 {
+        color: white;
+        text-align: left;
+    }
+      img {
+          border-radius: 50%
+    }
+    ul {
+        font-family: verdana;
+        font-size: 15px;
+        font-weight: bold;
     }
   </style>
 </head>
