--- a/superhero.html
+++ b/superhero.html
@@ -53,13 +53,13 @@
         <ul>
           <li>Superhuman strength & durability</li>
           <li>Can fly</li>
-          <li>array of weapons</li>
-          <li>powered armor suit</li>
+          <li>Array of weapons</li>
+          <li>Powered armor suit</li>
         </ul>
       </td>
       <td>
         <ul>
-          <li>cold blasts of air</li>
+          <li>Cold blasts of air</li>
         </ul>
       </td>
     </tr>
