--- a/superhero.html
+++ b/superhero.html
@@ -22,7 +22,7 @@
       font-size: 20px;
     }
     h1 {
-        color: white;
+        color: red;
         text-align: left;
     }
       img {
