--- a/css/main.html
+++ b/css/main.html
@@ -62,7 +62,7 @@
       </tr>
        <tr>
         <th>Template</th>
-        <td><a href="https://hollanddurrant.github.io/test.html">"https://hollanddurrant.github.io/test.html"</a></td>
+        <td><a href="https://hollanddurrant.github.io/test.html">"https://hollanddurrant.github.io/template.html"</a></td>
       </tr>
        <tr>
         <th>Superhero</th>
